[gd_scene load_steps=3 format=3 uid="uid://dnidjpyk50sii"]

[ext_resource type="Script" uid="uid://curj4dw1j5nn6" path="res://scripts/game_menu.gd" id="1_myx47"]
[ext_resource type="Texture2D" uid="uid://bqhabj0j6kghk" path="res://icon.svg" id="2_kukqi"]

[node name="PauseMenu" type="Control"]
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
script = ExtResource("1_myx47")

[node name="Background" type="ColorRect" parent="."]
layout_mode = 0
offset_right = 1280.0
offset_bottom = 720.0
color = Color(0.0253638, 0.0253638, 0.025363795, 0.3137255)

[node name="Pause" type="Button" parent="."]
process_mode = 3
layout_mode = 0
offset_left = 1144.0
offset_top = -1.0
offset_right = 1280.0
offset_bottom = 135.0
icon = ExtResource("2_kukqi")

[node name="Pause Menu Box" type="VBoxContainer" parent="."]
process_mode = 3
layout_mode = 0
offset_left = 400.0
offset_top = 381.0
offset_right = 892.0
offset_bottom = 666.0

[node name="Resume" type="Button" parent="Pause Menu Box"]
layout_mode = 2
text = "Resume"

[node name="Quit" type="Button" parent="Pause Menu Box"]
layout_mode = 2
text = "Quit"

[connection signal="pressed" from="Pause" to="." method="_on_pause_pressed"]
[connection signal="pressed" from="Pause Menu Box/Resume" to="." method="_on_resume_pressed"]
[connection signal="pressed" from="Pause Menu Box/Quit" to="." method="_on_quit_pressed"]
